k8s/bran-clusterip-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: bran
  name: bran-clusterip-ingress
  namespace: fampay
spec:
  ports:
  - port: 81
    protocol: TCP
    targetPort: 8000
  selector:
    app: bran
status:
  loadBalancer: {}
