k8s/bran-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: bran
  name: bran-nodeport
  namespace: fampay
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: bran
  type: NodePort
status:
  loadBalancer: {}
