k8s/bran-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: bran
  namespace: fampay
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: bran-nodeport
            port:
              number: 8000
        path: /(.*)
        pathType: Prefix
status:
  loadBalancer: {}
