k8s/bran-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bran-policy
spec:
  podSelector:
    matchLabels:
      app: bran
  policyTypes:
  - Ingress
  ingress:
    - from:
       - podSelector:
          matchLabels:
            app.kubernetes.io/instance: ingress-nginx

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
spec:
  podSelector:
    matchLabels:
      app: bran
  policyTypes:
  - Ingress
